5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4155/executions/1674_1880.log
== TEST (2019-05-01 19:48:23) 
-- CODE:
m = int(input("valor de m: "))

if(x > 13 or x == 0 or x < 0):
	print("numero de mes invalido")
else:
	if(x == 1):
		print("janeiro")
	elif(x == 2):
		print("fevereiro")
	elif(x == 3):
		print("marco")
	elif(x == 4):
		print("abril")
	elif(x == 5):
		print("maio")
	elif(x == 6)
		print("junho")
	elif(x == 7):
		print("julho")
	elif(x == 8):
		print("agosto")
	elif(x == 9):
		print("setembro")
	elif(x == 10):
		print("outubro")
	elif(x == 11):
		print("novembro")
	elif(x == 12):
		print("dezembro")
-- ERROR:
File "XXXX", line 16
    elif(x == 6)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 19:48:32) 
-- CODE:
m = int(input("valor de m: "))

if(x > 13 or x == 0 or x < 0):
	print("numero de mes invalido")
else:
	if(x == 1):
		print("janeiro")
	elif(x == 2):
		print("fevereiro")
	elif(x == 3):
		print("marco")
	elif(x == 4):
		print("abril")
	elif(x == 5):
		print("maio")
	elif(x == 6):
		print("junho")
	elif(x == 7):
		print("julho")
	elif(x == 8):
		print("agosto")
	elif(x == 9):
		print("setembro")
	elif(x == 10):
		print("outubro")
	elif(x == 11):
		print("novembro")
	elif(x == 12):
		print("dezembro")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if(x > 13 or x == 0 or x < 0):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 19:49:13) 
-- CODE:
m = int(input("valor de m: "))

if((x > 13) or (x == 0) or (x < 0)):
	print("numero de mes invalido")
else:
	if(x == 1):
		print("janeiro")
	elif(x == 2):
		print("fevereiro")
	elif(x == 3):
		print("marco")
	elif(x == 4):
		print("abril")
	elif(x == 5):
		print("maio")
	elif(x == 6):
		print("junho")
	elif(x == 7):
		print("julho")
	elif(x == 8):
		print("agosto")
	elif(x == 9):
		print("setembro")
	elif(x == 10):
		print("outubro")
	elif(x == 11):
		print("novembro")
	elif(x == 12):
		print("dezembro")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if((x > 13) or (x == 0) or (x < 0)):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 19:49:13) 
-- CODE:
m = int(input("valor de m: "))

if((x > 13) or (x == 0) or (x < 0)):
	print("numero de mes invalido")
else:
	if(x == 1):
		print("janeiro")
	elif(x == 2):
		print("fevereiro")
	elif(x == 3):
		print("marco")
	elif(x == 4):
		print("abril")
	elif(x == 5):
		print("maio")
	elif(x == 6):
		print("junho")
	elif(x == 7):
		print("julho")
	elif(x == 8):
		print("agosto")
	elif(x == 9):
		print("setembro")
	elif(x == 10):
		print("outubro")
	elif(x == 11):
		print("novembro")
	elif(x == 12):
		print("dezembro")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if((x > 13) or (x == 0) or (x < 0)):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 19:49:27) 
-- CODE:
x = int(input("valor de m: "))

if((x > 13) or (x == 0) or (x < 0)):
	print("numero de mes invalido")
else:
	if(x == 1):
		print("janeiro")
	elif(x == 2):
		print("fevereiro")
	elif(x == 3):
		print("marco")
	elif(x == 4):
		print("abril")
	elif(x == 5):
		print("maio")
	elif(x == 6):
		print("junho")
	elif(x == 7):
		print("julho")
	elif(x == 8):
		print("agosto")
	elif(x == 9):
		print("setembro")
	elif(x == 10):
		print("outubro")
	elif(x == 11):
		print("novembro")
	elif(x == 12):
		print("dezembro")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 19:49:35) 
-- CODE:
x = int(input("valor de x: "))

if((x > 13) or (x == 0) or (x < 0)):
	print("numero de mes invalido")
else:
	if(x == 1):
		print("janeiro")
	elif(x == 2):
		print("fevereiro")
	elif(x == 3):
		print("marco")
	elif(x == 4):
		print("abril")
	elif(x == 5):
		print("maio")
	elif(x == 6):
		print("junho")
	elif(x == 7):
		print("julho")
	elif(x == 8):
		print("agosto")
	elif(x == 9):
		print("setembro")
	elif(x == 10):
		print("outubro")
	elif(x == 11):
		print("novembro")
	elif(x == 12):
		print("dezembro")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 19:49:40) 
-- CODE:
x = int(input("valor de x: "))

if((x > 13) or (x == 0) or (x < 0)):
	print("numero de mes invalido")
else:
	if(x == 1):
		print("janeiro")
	elif(x == 2):
		print("fevereiro")
	elif(x == 3):
		print("marco")
	elif(x == 4):
		print("abril")
	elif(x == 5):
		print("maio")
	elif(x == 6):
		print("junho")
	elif(x == 7):
		print("julho")
	elif(x == 8):
		print("agosto")
	elif(x == 9):
		print("setembro")
	elif(x == 10):
		print("outubro")
	elif(x == 11):
		print("novembro")
	elif(x == 12):
		print("dezembro")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 19:49:44) 
-- CODE:
x = int(input("valor de x: "))

if((x > 13) or (x == 0) or (x < 0)):
	print("numero de mes invalido")
else:
	if(x == 1):
		print("janeiro")
	elif(x == 2):
		print("fevereiro")
	elif(x == 3):
		print("marco")
	elif(x == 4):
		print("abril")
	elif(x == 5):
		print("maio")
	elif(x == 6):
		print("junho")
	elif(x == 7):
		print("julho")
	elif(x == 8):
		print("agosto")
	elif(x == 9):
		print("setembro")
	elif(x == 10):
		print("outubro")
	elif(x == 11):
		print("novembro")
	elif(x == 12):
		print("dezembro")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 19:49:58) 
-- CODE:
x = int(input("valor de x: "))

if((x > 12) or (x == 0) or (x < 0)):
	print("numero de mes invalido")
else:
	if(x == 1):
		print("janeiro")
	elif(x == 2):
		print("fevereiro")
	elif(x == 3):
		print("marco")
	elif(x == 4):
		print("abril")
	elif(x == 5):
		print("maio")
	elif(x == 6):
		print("junho")
	elif(x == 7):
		print("julho")
	elif(x == 8):
		print("agosto")
	elif(x == 9):
		print("setembro")
	elif(x == 10):
		print("outubro")
	elif(x == 11):
		print("novembro")
	elif(x == 12):
		print("dezembro")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 19:50:04) 
-- CODE:
x = int(input("valor de x: "))

if((x > 12) or (x == 0) or (x < 0)):
	print("numero de mes invalido")
else:
	if(x == 1):
		print("janeiro")
	elif(x == 2):
		print("fevereiro")
	elif(x == 3):
		print("marco")
	elif(x == 4):
		print("abril")
	elif(x == 5):
		print("maio")
	elif(x == 6):
		print("junho")
	elif(x == 7):
		print("julho")
	elif(x == 8):
		print("agosto")
	elif(x == 9):
		print("setembro")
	elif(x == 10):
		print("outubro")
	elif(x == 11):
		print("novembro")
	elif(x == 12):
		print("dezembro")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 19:50:07) 
-- CODE:
x = int(input("valor de x: "))

if((x > 12) or (x == 0) or (x < 0)):
	print("numero de mes invalido")
else:
	if(x == 1):
		print("janeiro")
	elif(x == 2):
		print("fevereiro")
	elif(x == 3):
		print("marco")
	elif(x == 4):
		print("abril")
	elif(x == 5):
		print("maio")
	elif(x == 6):
		print("junho")
	elif(x == 7):
		print("julho")
	elif(x == 8):
		print("agosto")
	elif(x == 9):
		print("setembro")
	elif(x == 10):
		print("outubro")
	elif(x == 11):
		print("novembro")
	elif(x == 12):
		print("dezembro")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 19:50:13) 
-- CODE:
x = int(input("valor de x: "))

if((x > 12) or (x == 0) or (x < 0)):
	print("numero de mes invalido")
else:
	if(x == 1):
		print("janeiro")
	elif(x == 2):
		print("fevereiro")
	elif(x == 3):
		print("marco")
	elif(x == 4):
		print("abril")
	elif(x == 5):
		print("maio")
	elif(x == 6):
		print("junho")
	elif(x == 7):
		print("julho")
	elif(x == 8):
		print("agosto")
	elif(x == 9):
		print("setembro")
	elif(x == 10):
		print("outubro")
	elif(x == 11):
		print("novembro")
	elif(x == 12):
		print("dezembro")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 19:50:18) 
-- CODE:
x = int(input("valor de x: "))

if((x > 12) or (x == 0) or (x < 0)):
	print("numero de mes invalido")
else:
	if(x == 1):
		print("janeiro")
	elif(x == 2):
		print("fevereiro")
	elif(x == 3):
		print("marco")
	elif(x == 4):
		print("abril")
	elif(x == 5):
		print("maio")
	elif(x == 6):
		print("junho")
	elif(x == 7):
		print("julho")
	elif(x == 8):
		print("agosto")
	elif(x == 9):
		print("setembro")
	elif(x == 10):
		print("outubro")
	elif(x == 11):
		print("novembro")
	elif(x == 12):
		print("dezembro")
-- EXECUTION TIME:
0.138106
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero de mes invalido
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
